--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express-jwt": "^6.0.0",
     "express-validator": "5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.16",
+    "mongoose": "5.11.15",
     "nodemon": "^2.0.7",
     "uuid": "^8.3.2"
   },
