--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-validator": "5.3.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
+    "loadash": "^1.0.0",
     "mongoose": "5.11.15",
     "nodemon": "^2.0.7",
     "uuid": "^8.3.2"
